MB-42434: Gracefully stop Prometheus Exporter

The exporter needs to stop before RBAC becomes unavailable to avoid
a request crashing trying to auth during shutdown.

Change-Id: I26349312e114ac3d8e9ce40465140ace931f4226
Reviewed-on: http://review.couchbase.org/c/kv_engine/+/139369
Reviewed-by: Dave Rigby <daver@couchbase.com>
Tested-by: Build Bot <build@couchbase.com>